# CMAP_Ingestion

./: .gitignore  .travis.yml  pyproject.toml  requirements.txt  setup.py
cmapingest/: DB.py  SQL.py  common.py  cruise.py  data.py  general.py  ingest_test.py  mapping.py  mapping_folium.py  metadata.py  region_classification.py  stats.py  transfer.py  vault_structure.py
cmapingest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conf/: temp.py  vault_structure.py
src/: DB.py  SQL.py  common.py  cruise.py  data.py  general.py  mapping.py  metadata.py  stats.py  transfer.py
static/mission_icons/: tblALOHA_O2toAr.html  tblAMT01_extracted_cholorphyll.html  tblAMT13_Chisholm.html  tblDY084_AMT27_flow_cytometry.html  tblFK180310_C_P_Lyase.html  tblHOE_Legacy_2A.html  tblHOE_Legacy_3.html  tblHOE_Legacy_4.html  tblHOT221_247_14C_PP_EOC.html  tblHOT242_252_14C_PP_3_WSW.html  tblHOT296_Wirewalker.html  tblHOT297_Wirewalker.html  tblHOT298_Wirewalker.html  tblHOT302_Wirewalker.html  tblHOT_nifH_gene_abundances.html  tblJR16001_AMT26_flow_cytometry.html  tblJR18001_AMT28_flow_cytometry.html  tblKM1605_HL3_14C_carbon_fixation.html  tblKM1605_HL3_leu_incorp.html  tblKM1605_HL3_sediment_trap_flux.html  tblKM1709_Mesoscope_B12_HILIC_Incubations.html  tblKM1717_C_P_Lyase.html  tblKM1821_C_P_Lyase.html  tblKM1906_Gradients3_Surface_O2Ar_NCP.html  tblKM1906_Gradients_3_Influx_Stations.html  tblKM1906_Gradients_3_Influx_Underway.html  tblKM2001_C_P_Lyase.html  tblKOK1606_Gradients1_Cobalamins.html  (+8 more)
tests/: test_SQL.py  test_common.py  test_data.py  test_metadata.py
