[tool.poetry]
name = "cmapingest"
version = "0.1.0"
description = ""
authors = ["Norland Raphael Hagen <norlandrhagen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
folium="0.11.0"
pycmap="0.1.8"
requests="2.24.0"
numpy="1.19.0"
selenium="3.141.0"
beautifulsoup4="4.9.1"
Pillow="7.2.0"
Ipython="^7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
